--- a/phinx.yml
+++ b/phinx.yml
@@ -19,7 +19,7 @@ environments:
         host: localhost
         name: techtask_database
         user: root
-        pass: 'root'
+        pass: 'password'
         port: 3306
         charset: utf8
 
